syntax = "proto3";

option csharp_namespace = "Catalog.Grpc.Services";

service CatalogProtoService{
	rpc GetBooks (GetBooksRequest) returns (GetBooksResponse);
}


message GetBooksRequest{

}

message GetBooksResponse{
	message Book{
		int32 id = 1;
		string title = 2;
		string author = 3;
		string genre = 4;
		string image = 5;
	}

	repeated Book books = 1;
}
